--- a/index.html
+++ b/index.html
@@ -63,5 +63,127 @@
         </div>
       </section>
     </header>
+    <main>
+      <section class="header-main">
+        <div class="sonar-icon"></div>
+        <div class="right-header-main">
+          <h2>24</h2>
+          <p>ACTIVE SIGNALS</p>
+          <h2>07</h2>
+          <p>PRIORITY ALERTS</p>
+        </div>
+      </section>
+      <section class="buttons">
+        <div class="new-brief">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="24"
+            height="24"
+            viewBox="0 0 24 24"
+            fill="none"
+            stroke="currentColor"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            class="brief-icon"
+          >
+            <path
+              d="M4 14a1 1 0 0 1-.78-1.63l9.9-10.2a.5.5 0 0 1 .86.46l-1.92 6.02A1 1 0 0 0 13 10h7a1 1 0 0 1 .78 1.63l-9.9 10.2a.5.5 0 0 1-.86-.46l1.92-6.02A1 1 0 0 0 11 14z"
+            />
+          </svg>
+          <p>New Brief</p>
+        </div>
+        <div class="decode">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="24"
+            height="24"
+            viewBox="0 0 24 24"
+            fill="none"
+            stroke="currentColor"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            class="decode-icon"
+          >
+            <path d="m16 18 6-6-6-6" />
+            <path d="m8 6-6 6 6 6" />
+          </svg>
+          <p>Decode</p>
+        </div>
+        <div class="request-drone">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="24"
+            height="24"
+            viewBox="0 0 24 24"
+            fill="none"
+            stroke="currentColor"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            class="plain"
+          >
+            <path
+              d="M17.8 19.2 16 11l3.5-3.5C21 6 21.5 4 21 3c-1-.5-3 0-4.5 1.5L13 8 4.8 6.2c-.5-.1-.9.1-1.1.5l-.3.5c-.2.5-.1 1 .3 1.3L9 12l-2 3H4l-1 1 3 2 2 3 1-1v-3l3-2 3.5 5.3c.3.4.8.5 1.3.3l.5-.2c.4-.3.6-.7.5-1.2z"
+            />
+          </svg>
+          <p>Request Drone</p>
+        </div>
+      </section>
+      <section class="cards">
+        <div class="operation-nightfall">
+          <div class="top-card">
+            <div class="level1">CRITICAL</div>
+            <div class="status">In Progress</div>
+          </div>
+          <h2>Operation Nightfall</h2>
+          <div class="percentage">65%</div>
+        </div>
+        <div class="signal-intercept-aipha">
+          <div class="top-card">
+            <div class="level2">HIGH</div>
+            <div class="status">Analyzing</div>
+          </div>
+          <h2>Signal Intercept Aipha</h2>
+          <div class="percentage">40%</div>
+        </div>
+        <div class="asset-recovery">
+          <div class="top-card">
+            <div class="level3">MEDIUM</div>
+            <div class="status">Pendind</div>
+          </div>
+          <h2>Asset Recovery</h2>
+          <div class="percentage">15%</div>
+        </div>
+        <div class="cyber-defense-grid">
+          <div class="top-card">
+            <div class="level2">HIGH</div>
+            <div class="status">Active</div>
+          </div>
+          <h2>Cyber Defense Grid</h2>
+          <div class="percentage">80%</div>
+        </div>
+      </section>
+      <section class="red-button">
+        <div class="dot">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="24"
+            height="24"
+            viewBox="0 0 24 24"
+            fill="none"
+            stroke="currentColor"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            class="dot"
+          >
+            <circle cx="12.1" cy="12.1" r="1" />
+          </svg>
+        </div>
+        <h2>THREAT DETECTED</h2>
+      </section>
+    </main>
   </body>
 </html>
