--- a/index.html
+++ b/index.html
@@ -185,5 +185,79 @@
         <h2>THREAT DETECTED</h2>
       </section>
     </main>
+    <footer>
+      <nav class="navbar">
+        <div class="dashboard">
+          <div class="activity-icon">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              fill="none"
+              stroke="currentColor"
+              stroke-width="2"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              class="activity"
+            >
+              <path
+                d="M22 12h-2.48a2 2 0 0 0-1.93 1.46l-2.35 8.36a.25.25 0 0 1-.48 0L9.24 2.18a.25.25 0 0 0-.48 0l-2.35 8.36A2 2 0 0 1 4.49 12H2"
+              />
+            </svg>
+            <h2>Dashboard</h2>
+          </div>
+        </div>
+        <div class="feed">
+          <div class="feed-icon">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              fill="none"
+              stroke="currentColor"
+              stroke-width="2"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              class="feed"
+            >
+              <path d="M16.247 7.761a6 6 0 0 1 0 8.478" />
+              <path d="M19.075 4.933a10 10 0 0 1 0 14.134" />
+              <path d="M4.925 19.067a10 10 0 0 1 0-14.134" />
+              <path d="M7.753 16.239a6 6 0 0 1 0-8.478" />
+              <circle cx="12" cy="12" r="2" />
+            </svg>
+          </div>
+          <h2>Feed</h2>
+        </div>
+        <div class="brief">
+          <div class="brief-icon">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              fill="none"
+              stroke="currentColor"
+              stroke-width="2"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              class="brief"
+            >
+              <path
+                d="M6 22a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h8a2.4 2.4 0 0 1 1.704.706l3.588 3.588A2.4 2.4 0 0 1 20 8v12a2 2 0 0 1-2 2z"
+              />
+              <path d="M14 2v5a1 1 0 0 0 1 1h5" />
+              <path d="M10 9H8" />
+              <path d="M16 13H8" />
+              <path d="M16 17H8" />
+            </svg>
+          </div>
+          <h2>Brief</h2>
+        </div>
+        <div class="question-mark">?</div>
+      </nav>
+    </footer>
   </body>
 </html>
