--- a/index.html
+++ b/index.html
@@ -65,7 +65,25 @@
     </header>
     <main>
       <section class="header-main">
-        <div class="sonar-icon"></div>
+        <div class="sonar-icon">
+          <div class="display">
+            <div class="scanner__wrapper">
+              <div class="scanner"></div>
+            </div>
+            <div class="ping" style="top: 64%; left: 64%; --delay: 9">
+              <div class="ping__dot"></div>
+              <div class="ping__caption">Click Me</div>
+            </div>
+            <div class="ping" style="top: 32%; left: 32%; --delay: 4">
+              <div class="ping__dot"></div>
+              <div class="ping__caption">Click Me</div>
+            </div>
+            <div class="ping" style="top: 25%; left: 75%; --delay: 6">
+              <div class="ping__dot"></div>
+              <div class="ping__caption">Click Me</div>
+            </div>
+          </div>
+        </div>
         <div class="right-header-main">
           <h2>24</h2>
           <p>ACTIVE SIGNALS</p>
@@ -74,189 +92,225 @@
         </div>
       </section>
       <section class="buttons">
-        <div class="new-brief">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            width="24"
-            height="24"
-            viewBox="0 0 24 24"
-            fill="none"
-            stroke="currentColor"
-            stroke-width="2"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            class="brief-icon"
-          >
-            <path
-              d="M4 14a1 1 0 0 1-.78-1.63l9.9-10.2a.5.5 0 0 1 .86.46l-1.92 6.02A1 1 0 0 0 13 10h7a1 1 0 0 1 .78 1.63l-9.9 10.2a.5.5 0 0 1-.86-.46l1.92-6.02A1 1 0 0 0 11 14z"
-            />
-          </svg>
-          <p>New Brief</p>
-        </div>
-        <div class="decode">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            width="24"
-            height="24"
-            viewBox="0 0 24 24"
-            fill="none"
-            stroke="currentColor"
-            stroke-width="2"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            class="decode-icon"
-          >
-            <path d="m16 18 6-6-6-6" />
-            <path d="m8 6-6 6 6 6" />
-          </svg>
-          <p>Decode</p>
-        </div>
-        <div class="request-drone">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            width="24"
-            height="24"
-            viewBox="0 0 24 24"
-            fill="none"
-            stroke="currentColor"
-            stroke-width="2"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            class="plain"
-          >
-            <path
-              d="M17.8 19.2 16 11l3.5-3.5C21 6 21.5 4 21 3c-1-.5-3 0-4.5 1.5L13 8 4.8 6.2c-.5-.1-.9.1-1.1.5l-.3.5c-.2.5-.1 1 .3 1.3L9 12l-2 3H4l-1 1 3 2 2 3 1-1v-3l3-2 3.5 5.3c.3.4.8.5 1.3.3l.5-.2c.4-.3.6-.7.5-1.2z"
-            />
-          </svg>
-          <p>Request Drone</p>
-        </div>
+        <a href="#">
+          <div class="new-brief">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              fill="none"
+              stroke="currentColor"
+              stroke-width="2"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              class="brief-icon"
+            >
+              <path
+                d="M4 14a1 1 0 0 1-.78-1.63l9.9-10.2a.5.5 0 0 1 .86.46l-1.92 6.02A1 1 0 0 0 13 10h7a1 1 0 0 1 .78 1.63l-9.9 10.2a.5.5 0 0 1-.86-.46l1.92-6.02A1 1 0 0 0 11 14z"
+              />
+            </svg>
+            <p>New Brief</p>
+          </div>
+        </a>
+        <a href="#">
+          <div class="decode">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              fill="none"
+              stroke="currentColor"
+              stroke-width="2"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              class="decode-icon"
+            >
+              <path d="m16 18 6-6-6-6" />
+              <path d="m8 6-6 6 6 6" />
+            </svg>
+            <p>Decode</p>
+          </div>
+        </a>
+        <a href="#">
+          <div class="request-drone">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              fill="none"
+              stroke="currentColor"
+              stroke-width="2"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              class="plain"
+            >
+              <path
+                d="M17.8 19.2 16 11l3.5-3.5C21 6 21.5 4 21 3c-1-.5-3 0-4.5 1.5L13 8 4.8 6.2c-.5-.1-.9.1-1.1.5l-.3.5c-.2.5-.1 1 .3 1.3L9 12l-2 3H4l-1 1 3 2 2 3 1-1v-3l3-2 3.5 5.3c.3.4.8.5 1.3.3l.5-.2c.4-.3.6-.7.5-1.2z"
+              />
+            </svg>
+            <p>Request Drone</p>
+          </div>
+        </a>
       </section>
       <section class="cards">
-        <div class="operation-nightfall">
-          <div class="top-card">
-            <div class="level1">CRITICAL</div>
-            <div class="status">In Progress</div>
+        <a href="#">
+          <div class="operation-nightfall">
+            <div class="top-card">
+              <div class="level1">CRITICAL</div>
+              <div class="status">In Progress</div>
+            </div>
+            <h2>Operation Nightfall</h2>
+            <div class="percentage">
+              <div><div class="a"></div></div>
+              65%
+            </div>
           </div>
-          <h2>Operation Nightfall</h2>
-          <div class="percentage">65%</div>
-        </div>
-        <div class="signal-intercept-aipha">
-          <div class="top-card">
-            <div class="level2">HIGH</div>
-            <div class="status">Analyzing</div>
+        </a>
+        <a href="#">
+          <div class="signal-intercept-aipha">
+            <div class="top-card">
+              <div class="level2">HIGH</div>
+              <div class="status">Analyzing</div>
+            </div>
+            <h2>Signal Intercept Aipha</h2>
+            <div class="percentage">
+              <div><div class="b"></div></div>
+              40%
+            </div>
           </div>
-          <h2>Signal Intercept Aipha</h2>
-          <div class="percentage">40%</div>
-        </div>
-        <div class="asset-recovery">
-          <div class="top-card">
-            <div class="level3">MEDIUM</div>
-            <div class="status">Pendind</div>
+        </a>
+        <a href="#">
+          <div class="asset-recovery">
+            <div class="top-card">
+              <div class="level3">MEDIUM</div>
+              <div class="status">Pendind</div>
+            </div>
+            <h2>Asset Recovery</h2>
+            <div class="percentage">
+              <div><div class="c"></div></div>
+              15%
+            </div>
           </div>
-          <h2>Asset Recovery</h2>
-          <div class="percentage">15%</div>
-        </div>
-        <div class="cyber-defense-grid">
-          <div class="top-card">
-            <div class="level2">HIGH</div>
-            <div class="status">Active</div>
+        </a>
+        <a href="#">
+          <div class="cyber-defense-grid">
+            <div class="top-card">
+              <div class="level2">HIGH</div>
+              <div class="status">Active</div>
+            </div>
+            <h2>Cyber Defense Grid</h2>
+            <div class="percentage">
+              <div><div class="d"></div></div>
+              80%
+            </div>
           </div>
-          <h2>Cyber Defense Grid</h2>
-          <div class="percentage">80%</div>
-        </div>
+        </a>
       </section>
       <section class="red-button">
-        <div class="dot">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            width="24"
-            height="24"
-            viewBox="0 0 24 24"
-            fill="none"
-            stroke="currentColor"
-            stroke-width="2"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            class="dot"
-          >
-            <circle cx="12.1" cy="12.1" r="1" />
-          </svg>
-        </div>
-        <h2>THREAT DETECTED</h2>
+        <a href="#">
+          <div class="dot">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              fill="none"
+              stroke="currentColor"
+              stroke-width="2"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              class="dot"
+            >
+              <circle cx="12.1" cy="12.1" r="1" />
+            </svg>
+          </div>
+          <h2>THREAT DETECTED</h2>
+        </a>
       </section>
     </main>
     <footer>
       <nav class="navbar">
-        <div class="dashboard">
-          <div class="activity-icon">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              width="24"
-              height="24"
-              viewBox="0 0 24 24"
-              fill="none"
-              stroke="currentColor"
-              stroke-width="2"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              class="activity"
-            >
-              <path
-                d="M22 12h-2.48a2 2 0 0 0-1.93 1.46l-2.35 8.36a.25.25 0 0 1-.48 0L9.24 2.18a.25.25 0 0 0-.48 0l-2.35 8.36A2 2 0 0 1 4.49 12H2"
-              />
-            </svg>
+        <a href="#">
+          <div class="dashboard">
+            <div class="activity-icon">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                fill="none"
+                stroke="currentColor"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                class="activity"
+              >
+                <path
+                  d="M22 12h-2.48a2 2 0 0 0-1.93 1.46l-2.35 8.36a.25.25 0 0 1-.48 0L9.24 2.18a.25.25 0 0 0-.48 0l-2.35 8.36A2 2 0 0 1 4.49 12H2"
+                />
+              </svg>
+            </div>
             <h2>Dashboard</h2>
           </div>
-        </div>
-        <div class="feed">
-          <div class="feed-icon">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              width="24"
-              height="24"
-              viewBox="0 0 24 24"
-              fill="none"
-              stroke="currentColor"
-              stroke-width="2"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              class="feed"
-            >
-              <path d="M16.247 7.761a6 6 0 0 1 0 8.478" />
-              <path d="M19.075 4.933a10 10 0 0 1 0 14.134" />
-              <path d="M4.925 19.067a10 10 0 0 1 0-14.134" />
-              <path d="M7.753 16.239a6 6 0 0 1 0-8.478" />
-              <circle cx="12" cy="12" r="2" />
-            </svg>
+        </a>
+        <a href="#">
+          <div class="feed">
+            <div class="feed-icon">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                fill="none"
+                stroke="currentColor"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                class="feed"
+              >
+                <path d="M16.247 7.761a6 6 0 0 1 0 8.478" />
+                <path d="M19.075 4.933a10 10 0 0 1 0 14.134" />
+                <path d="M4.925 19.067a10 10 0 0 1 0-14.134" />
+                <path d="M7.753 16.239a6 6 0 0 1 0-8.478" />
+                <circle cx="12" cy="12" r="2" />
+              </svg>
+            </div>
+            <h2>Feed</h2>
           </div>
-          <h2>Feed</h2>
-        </div>
-        <div class="brief">
-          <div class="brief-icon">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              width="24"
-              height="24"
-              viewBox="0 0 24 24"
-              fill="none"
-              stroke="currentColor"
-              stroke-width="2"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              class="brief"
-            >
-              <path
-                d="M6 22a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h8a2.4 2.4 0 0 1 1.704.706l3.588 3.588A2.4 2.4 0 0 1 20 8v12a2 2 0 0 1-2 2z"
-              />
-              <path d="M14 2v5a1 1 0 0 0 1 1h5" />
-              <path d="M10 9H8" />
-              <path d="M16 13H8" />
-              <path d="M16 17H8" />
-            </svg>
+        </a>
+        <a href="#">
+          <div class="brief">
+            <div class="brief-icon">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                fill="none"
+                stroke="currentColor"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                class="brief"
+              >
+                <path
+                  d="M6 22a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h8a2.4 2.4 0 0 1 1.704.706l3.588 3.588A2.4 2.4 0 0 1 20 8v12a2 2 0 0 1-2 2z"
+                />
+                <path d="M14 2v5a1 1 0 0 0 1 1h5" />
+                <path d="M10 9H8" />
+                <path d="M16 13H8" />
+                <path d="M16 17H8" />
+              </svg>
+            </div>
+            <h2>Brief</h2>
           </div>
-          <h2>Brief</h2>
-        </div>
-        <div class="question-mark">?</div>
+        </a>
+        <a href="#">
+          <div class="question-mark">?</div>
+        </a>
       </nav>
     </footer>
   </body>
